# web-scraper

./: citation.txt  pyproject.toml
scraper/: scraper.py
tests/: test_scraper.py
