[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["abdalazez <abdalazzezzalsalahat@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
